# crowdsourcing_labelling_api

./: .env  .env.example  README.md  main.py  pyproject.toml
core/: settings.py  urls.py
labeling/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
labeling/migrations/: 0001_initial.py  0002_annotation_dataitem_label_validation_annotation_item_and_more.py
